logic update: finished EntityFactory as entity builder. Created temp mob generator system on Baldarks