@@ -1,7 +1,10 @@
 package dson.crowee.sources.graphicSource.DrawerClasses;
 
+import dson.crowee.obj.buiders.EntityFactory;
+import dson.crowee.obj.objects.FormalCode;
 import dson.crowee.obj.objects.PlayerCharacter;
 import dson.crowee.sources.colliderSystem.Trigger;
+import dson.crowee.sources.graphicSource.UI.SpriteModel;
 
 
 import javax.imageio.ImageIO;
@@ -17,25 +20,18 @@ public class PlayerCharacterGraphicsDrawer {
 
     public static void setPlayerCharacterGraphicsControllerOnWork(PlayerCharacter player){
         playerCharacter = player;
-        Image image = null;
-        List<Image> spriteImages = playerCharacter.getSpriteImages();
-        if(spriteImages == null)
-            spriteImages = new ArrayList<Image>();
-        try {
-            image = ImageIO.read(new File("C:\\Users\\david\\Documents\\Java Projects\\croww\\src\\main\\resources\\sprites\\bg\\player\\davdrak.png"));
-        }catch (IOException e){
-
-        }
-        playerCharacter.getSpriteImages().addFirst(image);
-
-        playerCharacter.setX(320);
-        playerCharacter.setY(240);
     }
 
     public static void drawObject(Graphics2D graphics) {
-        List<Image> images = playerCharacter.getSpriteImages();
-        Trigger trigger = playerCharacter.getTrigger();
-        graphics.drawImage(images.get(0), playerCharacter.getX(), playerCharacter.getY(), 64, 64, null);
+        SpriteModel spriteModel = playerCharacter.getSpriteModel();
+
+        graphics.drawImage(
+                spriteModel.getSpriteModelImages().getFirst(),
+                playerCharacter.getX(),
+                playerCharacter.getY(),
+                64,
+                64,
+                null);
     }
 
     public static PlayerCharacter getPlayerCharacter(){
